[package]
name = "rumqtt-bytes"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = "1.10"
thiserror = "2.0"

tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
pretty_assertions = "1"
